--- a/estilo1.css
+++ b/estilo1.css
@@ -2,8 +2,11 @@ body {
     background-image: url(imagens/FundoCentral.png);
     color: white;
     font-weight: bold;
-    margin-left: 10%;
-    margin-right: 10%;
+}
+
+#Centro {
+        margin-left: 30%;
+        margin-right: 30%;
 }
 
 #redes_sociais img{
