--- a/estilo1.css
+++ b/estilo1.css
@@ -8,6 +8,7 @@ body {
         margin-left: 30%;
         margin-right: 30%;
         text-align: center;
+        border: solid;
 }
 
 #Centro #imgmascara {
