--- a/estilo1.css
+++ b/estilo1.css
@@ -1,5 +1,7 @@
 body {
     background-image: url(imagens/FundoCentral.png);
+    background-size: 50%;
+    background-repeat: repeat-x repeat-y;
     color: white;
     font-weight: bold;
 }
@@ -12,7 +14,6 @@ body {
 }
 
 #Centro #imgmascara img{
-    padding-top: 50px;
     width: 30%;
     height: 30%;
 }
