--- a/estilo1.css
+++ b/estilo1.css
@@ -11,6 +11,7 @@ body {
         margin-right: 15%;
         text-align: center;
         border: solid;
+        float: left;
 }
 
 #Centro #imgmascara img{
