--- a/estilo1.css
+++ b/estilo1.css
@@ -10,6 +10,7 @@ body {
         text-align: center;
         border: solid;
         float: left;
+        margin: 60%
 }
 
 #Centro #imgmascara img{
