--- a/estilo1.css
+++ b/estilo1.css
@@ -7,6 +7,11 @@ body {
     font-weight: bold;
 }
 
+div {
+    margin-left: 10px;
+    margin-right:10px;
+}
+
 /*---------- Bloco da esquerda ----------*/ 
 
 #esquerda {
