--- a/estilo1.css
+++ b/estilo1.css
@@ -18,8 +18,9 @@ div {
     float: left;
     border: solid blue; 
     font-size: smaller;
-    background-color: rgb(62, 62, 62);
-    max-width: 20%;
+    background-color: rgb(36 36 36);
+    max-width: 25%;
+    text-align: center;
 }
 
 #esquerda p {
@@ -49,6 +50,7 @@ div {
 }
 .especificacao {
     text-align: right;
+    margin: 10px;
 }
 
 
