--- a/estilo1.css
+++ b/estilo1.css
@@ -5,6 +5,8 @@ body {
     background-repeat: repeat-x repeat-y;
     color: white;
     font-weight: bold;
+    margin-left: 20%;
+    margin-right: 20%;
 }
 
 div {
