--- a/estilo1.css
+++ b/estilo1.css
@@ -6,7 +6,7 @@ body {
     color: white;
     font-weight: bold;
     margin-left: 10%;
-    margin-right: 10%;
+    margin-right: 8%;
 }
 
 div {
@@ -66,7 +66,7 @@ div {
         border-left: solid red;
         border-right: solid red;
         float: left;
-        max-width: 60%;
+        max-width: 55%;
 }
 
 #Centro #imgmascara img{
@@ -96,10 +96,15 @@ div {
 /*---------- Bloco da Direita ----------*/ 
 
 #direita     {
-    float: right;
+    float: left;
     border: solid #3f3f3f; 
     font-size: smaller;
     background-color: rgb(36 36 36);
-    max-width: auto;
+    max-width: 18%;
     text-align: center;
+}
+
+#direita #skin {
+    width: 83%;
+    height: auto;
 }
