--- a/estilo1.css
+++ b/estilo1.css
@@ -21,7 +21,7 @@ div {
     border: solid #3f3f3f; 
     font-size: smaller;
     background-color: rgb(36 36 36);
-    max-width: auto;
+    max-width: 18%;
     text-align: center;
 }
 
