--- a/estilo1.css
+++ b/estilo1.css
@@ -5,9 +5,9 @@ body {
     background-repeat: repeat-x repeat-y;
     color: white;
     font-weight: bold;
-    margin-left: 8%;
+    margin-left: 10%;
     margin-right: 8%;
-    font-family:'Gill Sans MT';
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 div {
@@ -22,7 +22,7 @@ div {
     border: solid #3f3f3f; 
     font-size: smaller;
     background-color: rgb(36 36 36);
-    max-width: 18%;
+    max-width: auto;
     text-align: center;
 }
 
@@ -93,6 +93,12 @@ div {
 
 .separa {
     color: rgb(241, 0, 0);
+}
+
+/*---------- Bloco do Contato----------*/ 
+
+#Centro #contato {
+
 }
 
 /*---------- Bloco da Direita ----------*/ 
