--- a/estilo1.css
+++ b/estilo1.css
@@ -7,7 +7,7 @@ body {
     font-weight: bold;
     margin-left: 10%;
     margin-right: 8%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans MT';
 }
 
 div {
@@ -22,7 +22,7 @@ div {
     border: solid #3f3f3f; 
     font-size: smaller;
     background-color: rgb(36 36 36);
-    max-width: auto;
+    max-width: 17%;
     text-align: center;
 }
 
@@ -97,7 +97,8 @@ div {
 
 /*---------- Bloco do Contato----------*/ 
 
-#Centro #contato {
+#Centro #contato h2 {
+    text-align: center;
 
 }
 
