--- a/estilo1.css
+++ b/estilo1.css
@@ -99,9 +99,12 @@ div {
 
 #Centro #contato h2 {
     text-align: center;
-
+    font-size: small;
 }
 
+#Centro #contato h3 {
+    font: small;
+}
 /*---------- Bloco da Direita ----------*/ 
 
 #direita     {
