--- a/estilo1.css
+++ b/estilo1.css
@@ -100,11 +100,14 @@ div {
 #Centro #contato h2 {
     text-align: center;
     font-size: small;
+    color: #3f3f3f;
 }
 
 #Centro #contato h3 {
-    font: small;
+    font-size: small;
+    color: #3f3f3f;
 }
+
 /*---------- Bloco da Direita ----------*/ 
 
 #direita     {
