--- a/estilo1.css
+++ b/estilo1.css
@@ -5,17 +5,16 @@ body {
     background-repeat: repeat-x repeat-y;
     color: white;
     font-weight: bold;
-    margin-left: 0;
-    margin-right: 0;
+    margin-left: 10%;
+    margin-right: 8%;
     font-family: 'Gill Sans MT';
-    min-width: 414px; /* Força uma largura mínima típica de desktop */
-    overflow-x: auto; /* Permite rolagem horizontal, se necessário */
-    margin: 3%;
+    min-width: 1000px; /* Força uma largura mínima típica de desktop */
+
 }
 
 div {
-    margin-left: 5px;
-    margin-right:5px;
+    margin-left: 10px;
+    margin-right:10px;
 }
 
 /*---------- Bloco da esquerda 1 ----------*/ 
@@ -71,7 +70,7 @@ div {
         border-left: solid red;
         border-right: solid red;
         float: left;
-        max-width: 50%;
+        max-width: 55%;
 }
 
 #Centro #imgmascara img{
@@ -106,7 +105,7 @@ div {
     color: #3f3f3f;
 }
 
-#Centro #contato h1 {
+#Centro #contato h3 {
     font-size: small;
     color: #3f3f3f;
 }
@@ -118,7 +117,7 @@ div {
     border: solid #3f3f3f; 
     font-size: smaller;
     background-color: rgb(36 36 36);
-    max-width: 15%;
+    max-width: 18%;
     text-align: center;
 }
 
