--- a/estilo1.css
+++ b/estilo1.css
@@ -3,7 +3,7 @@ body {
     background-image: url(imagens/FundoCentral.png);
     background-size: 50%;
     background-repeat: repeat-x repeat-y;
-    color: white;
+    color: black;
     font-weight: bold;
     margin-left: 10%;
     margin-right: 8%;
