--- a/estilo1.css
+++ b/estilo1.css
@@ -7,7 +7,6 @@ body {
     font-weight: normal;
     margin-left: 3%;
     margin-right: 0;
-    font-family: 'Gill Sans MT';
     min-width: 200px; 
 
 }
@@ -118,6 +117,7 @@ div {
 
 #livepix p {
     text-align: left;
+    font-size: 75%;
 }
 
 /*---------- Bloco do Contato----------*/ 
@@ -158,4 +158,3 @@ div {
     text-align: center;
     color: red;
 }
-
